tests/ui/implied-bounds/normalization-nested.lifetime.stderr
error: lifetime may not live long enough
  --> $DIR/normalization-nested.rs:39:5
   |
LL | pub fn test_borrowck<'x>(_: Map<Vec<&'x ()>>, s: &'x str) -> &'static str {
   |                      -- lifetime `'x` defined here
LL |     s
   |     ^ returning this value requires that `'x` must outlive `'static`

error: aborting due to previous error

